--- a/package.json
+++ b/package.json
@@ -13,5 +13,9 @@
     "astro": "^4.14.4",
     "@astrojs/check": "^0.9.3",
     "typescript": "^5.5.4"
-  }
+  },
+  "devDependencies": {
+    "nx": "19.6.2"
+  },
+  "nx": {}
 }
