--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "my-astro-project-using-bun",
   "type": "module",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "scripts": {
     "dev": "astro dev",
     "start": "astro dev",
@@ -10,8 +10,11 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^4.14.4",
     "@astrojs/check": "^0.9.3",
+    "@astrojs/vercel": "^7.8.0",
+    "@elysiajs/swagger": "^1.1.1",
+    "astro": "^4.14.4",
+    "elysia": "^1.1.7",
     "typescript": "^5.5.4"
   },
   "devDependencies": {
