--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "my-astro-project-using-bun",
   "type": "module",
-  "version": "0.0.5",
+  "version": "0.0.6",
   "scripts": {
     "dev": "astro dev",
     "start": "astro dev",
@@ -15,6 +15,7 @@
     "@elysiajs/swagger": "^1.1.1",
     "astro": "^4.14.4",
     "elysia": "^1.1.7",
+    "jose": "^5.7.0",
     "typescript": "^5.5.4"
   },
   "devDependencies": {
