--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "my-astro-project-using-bun",
   "type": "module",
-  "version": "0.0.7",
+  "version": "0.0.8",
   "scripts": {
     "dev": "astro dev",
     "start": "astro dev",
@@ -16,6 +16,7 @@
     "astro": "^4.14.4",
     "elysia": "^1.1.7",
     "jose": "^5.7.0",
+    "nanoid": "^5.0.7",
     "typescript": "^5.5.4"
   },
   "devDependencies": {
