--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "my-astro-project-using-bun",
   "type": "module",
-  "version": "0.0.8",
+  "version": "0.0.9",
   "scripts": {
     "dev": "astro dev",
     "start": "astro dev",
@@ -13,6 +13,7 @@
     "@astrojs/check": "^0.9.3",
     "@astrojs/vercel": "^7.8.0",
     "@elysiajs/swagger": "^1.1.1",
+    "@types/node": "^22.5.0",
     "astro": "^4.14.4",
     "elysia": "^1.1.7",
     "jose": "^5.7.0",
