--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "my-astro-project-using-bun",
   "type": "module",
-  "version": "0.0.9",
+  "version": "0.1.0",
   "scripts": {
     "dev": "astro dev",
     "start": "astro dev",
@@ -9,15 +9,21 @@
     "preview": "astro preview",
     "astro": "astro"
   },
+  "license": "MIT",
   "dependencies": {
     "@astrojs/check": "^0.9.3",
+    "@astrojs/react": "^3.6.2",
     "@astrojs/vercel": "^7.8.0",
     "@elysiajs/swagger": "^1.1.1",
     "@types/node": "^22.5.0",
+    "@types/react": "^18.3.4",
+    "@types/react-dom": "^18.3.0",
     "astro": "^4.14.4",
     "elysia": "^1.1.7",
     "jose": "^5.7.0",
     "nanoid": "^5.0.7",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "typescript": "^5.5.4"
   },
   "devDependencies": {
