tmp for html.html

--- a/package.json
+++ b/package.json
@@ -15,11 +15,15 @@
     "@astrojs/react": "^3.6.2",
     "@astrojs/vercel": "^7.8.0",
     "@elysiajs/swagger": "^1.1.1",
+    "@simplewebauthn/browser": "^10.0.0",
+    "@simplewebauthn/server": "^10.0.1",
     "@types/node": "^22.5.0",
     "@types/react": "^18.3.4",
     "@types/react-dom": "^18.3.0",
     "astro": "^4.14.4",
+    "canvas-confetti": "^1.9.3",
     "elysia": "^1.1.7",
+    "fido2-lib": "^3.5.3",
     "jose": "^5.7.0",
     "nanoid": "^5.0.7",
     "react": "^18.3.1",
